Add model classes, configurations, filters, controller, service, and client layers