@@ -3,13 +3,16 @@ package com.company.customersearch.service.impl;
 import com.company.customersearch.client.ThirdPartyCustomerClient;
 import com.company.customersearch.enums.Brand;
 import com.company.customersearch.model.Customer;
+import com.company.customersearch.model.CustomerSearchResponse;
+import com.company.customersearch.model.CustomerSummary;
 import com.company.customersearch.service.CustomerService;
+import com.company.customersearch.util.CorrelationIdUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,70 +25,44 @@ public class CustomerServiceImpl implements CustomerService {
     }
 
     @Override
-    public Object searchCustomers(Brand brand, Map<String, String> queryParams) {
-        log.info("Searching customers for brand: {}", brand.getDisplayName());
+    public CustomerSearchResponse searchCustomers(Brand brand, Map<String, String> filters) {
+        String correlationId = CorrelationIdUtil.getCorrelationId();
+        log.info("Searching customers for brand: {} with filters: {}. Correlation ID: {}", 
+                brand.getDisplayName(), filters, correlationId);
 
-        Map<String, String> filteredParams = filterAndBuildQueryParams(queryParams);
-        log.debug("Filtered query parameters: {}", filteredParams);
+        List<Customer> customers = thirdPartyCustomerClient.searchCustomers(brand, filters);
 
-        List<Customer> customers = thirdPartyCustomerClient.searchCustomers(filteredParams);
-        log.info("Received {} customer records from external API", customers.size());
-
-        if (customers.isEmpty()) {
-            log.info("No customers found for brand: {}", brand.getDisplayName());
-            return Map.of("message", "No customer records found");
+        if (customers == null || customers.isEmpty()) {
+            log.info("No customers found for brand: {}. Correlation ID: {}", brand.getDisplayName(), correlationId);
+            return CustomerSearchResponse.builder()
+                    .message("No records found")
+                    .correlationId(correlationId)
+                    .build();
         }
 
         if (customers.size() == 1) {
-            log.info("Single customer found, returning complete details");
-            return customers.get(0);
+            log.info("Found 1 customer for brand: {}. Correlation ID: {}", brand.getDisplayName(), correlationId);
+            return CustomerSearchResponse.builder()
+                    .message("Customer found")
+                    .customer(customers.get(0))
+                    .correlationId(correlationId)
+                    .build();
         }
 
-        log.info("Multiple customers found ({}), returning minimal details", customers.size());
-        return customers.stream()
-                .map(customer -> Map.of(
-                        "customerId", customer.getCustomerId(),
-                        "firstName", customer.getFirstName(),
-                        "lastName", customer.getLastName(),
-                        "phoneNumber", customer.getPhoneNumber()
-                ))
-                .toList();
-    }
+        log.info("Found {} customers for brand: {}. Correlation ID: {}", customers.size(), brand.getDisplayName(), correlationId);
+        List<CustomerSummary> summaries = customers.stream()
+                .map(c -> CustomerSummary.builder()
+                        .customerId(c.getCustomerId())
+                        .firstName(c.getFirstName())
+                        .lastName(c.getLastName())
+                        .email(c.getEmail())
+                        .build())
+                .collect(Collectors.toList());
 
-    private Map<String, String> filterAndBuildQueryParams(Map<String, String> queryParams) {
-        Map<String, String> filtered = new HashMap<>();
-
-        if (queryParams != null) {
-            if (queryParams.containsKey("first_name") && isNotEmpty(queryParams.get("first_name"))) {
-                filtered.put("first_name", queryParams.get("first_name"));
-            }
-            if (queryParams.containsKey("last_name") && isNotEmpty(queryParams.get("last_name"))) {
-                filtered.put("last_name", queryParams.get("last_name"));
-            }
-            if (queryParams.containsKey("loyalty_id") && isNotEmpty(queryParams.get("loyalty_id"))) {
-                filtered.put("loyalty_id", queryParams.get("loyalty_id"));
-            }
-            if (queryParams.containsKey("postal_code") && isNotEmpty(queryParams.get("postal_code"))) {
-                filtered.put("postal_code", queryParams.get("postal_code"));
-            }
-            if (queryParams.containsKey("affiliation") && isNotEmpty(queryParams.get("affiliation"))) {
-                filtered.put("affiliation", queryParams.get("affiliation"));
-            }
-            if (queryParams.containsKey("date_of_birth") && isNotEmpty(queryParams.get("date_of_birth"))) {
-                filtered.put("date_of_birth", queryParams.get("date_of_birth"));
-            }
-            if (queryParams.containsKey("email") && isNotEmpty(queryParams.get("email"))) {
-                filtered.put("email", queryParams.get("email"));
-            }
-            if (queryParams.containsKey("phone_number") && isNotEmpty(queryParams.get("phone_number"))) {
-                filtered.put("phone_number", queryParams.get("phone_number"));
-            }
-        }
-
-        return filtered;
-    }
-
-    private boolean isNotEmpty(String value) {
-        return value != null && !value.trim().isEmpty();
+        return CustomerSearchResponse.builder()
+                .message("Multiple customers found")
+                .customers(summaries)
+                .correlationId(correlationId)
+                .build();
     }
 }
